<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bg"
    android:id="@+id/timer_layout"
    >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom= "5dp"
        >

        <TableRow>
            <TextView
                android:text="@string/hour_text"
                android:layout_height="wrap_content"
                android:layout_width="90dp"
                android:layout_weight="1"
                android:layout_column="1"
                android:layout_span="1"
                android:gravity="center"
                />

            <TextView
                android:text="@string/minutes_text"
                android:layout_height="wrap_content"
                android:layout_width="90dp"
                android:layout_weight="1"
                android:layout_column="2"
                android:layout_span="1"
                android:gravity="center"
                />

            <TextView
                android:text = "@string/seconds_text"
                android:layout_height="wrap_content"
                android:layout_width="90dp"
                android:layout_weight="1"
                android:layout_column="3"
                android:layout_span="1"
                android:gravity="center"
                />
        </TableRow>
    </TableLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="20dp"
        android:layout_gravity="center_horizontal">

        <kankan.wheel.widget.WheelView
            android:id="@+id/hours"
            android:layout_height="wrap_content"
            android:layout_width="90dp"
            />

        <kankan.wheel.widget.WheelView
            android:id="@+id/minutes"
            android:layout_height="wrap_content"
            android:layout_width="90dp"
            />

        <kankan.wheel.widget.WheelView
            android:id="@+id/seconds"
            android:layout_height="wrap_content"
            android:layout_width="90dp"
            />
    </LinearLayout>

    <ScrollView 
        android:layout_width = "fill_parent"
        android:layout_height = "fill_parent"
        android:scrollbars="vertical"
        >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        >
        <TableRow>
            <Button
                android:id="@+id/reset"
                android:text="@string/reset_button"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_column="1"
                android:layout_span="1"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:text=""
                android:textSize="5px"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_column="1"
                android:layout_span="1"
                android:gravity="center"/>
        </TableRow>

        <TableRow >
            <ToggleButton
                android:textOn="@string/volume_on"
                android:textOff="@string/volume_off"
                android:id="@+id/volumeButton"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="1"
                android:layout_span="1"
                />

            <TextView
                android:text=""
                android:textSize="5px"
                android:layout_height="wrap_content"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_column="2"
                android:layout_span="1"
                android:gravity="center"
                />

            <ToggleButton
                android:textOn="@string/vibration_on"
                android:textOff="@string/vibration_off"
                android:id="@+id/vibrationButton"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="3"
                android:layout_span="1"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:text=""
                android:textSize="5px"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_column="1"
                android:layout_span="1"
                android:gravity="center"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/start"
                android:text="@string/start_button"
                android:textSize="30px"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_column="1"
                android:layout_weight="2"
                android:layout_span="1"
                />
        </TableRow>
    </TableLayout>
    </ScrollView>
</LinearLayout>
